--- a/steps/fix_it.yml
+++ b/steps/fix_it.yml
@@ -15,9 +15,7 @@ startFlow:
 githubActions:
   frontend:
     capabilities:
-    - jest-puppeteer
-    - puppeteer
-    testFile: "profile.test.js"
+    testFile: "ItemFetcher.test.js"
 trigger:
   type: github_pr_lifecycle_status
   flowNode:
